api for projects and swagger
