# model/project.go
@@ -12,8 +12,9 @@ type AudioPart struct {
 }
 
 type Project struct {
-	ProjectId uuid.UUID `json:"projectId" binding:"required"`
-	Name      string    `json:"name" binding:"required"`
-	Path      string    `json:"path" binding:"required"`
-	UserId    uuid.UUID `json:"userId" binding:"required"`
+	ProjectId  uuid.UUID   `json:"projectId" binding:"required"`
+	Name       string      `json:"name" binding:"required"`
+	Path       string      `json:"path" binding:"required"`
+	UserId     uuid.UUID   `json:"userId" binding:"required"`
+	AudioParts []AudioPart `json:"audioParts" binding:"omitempty"`
 }
